@@ -1,8 +1,10 @@
 package com.chunjae.chunjaefull5final.service;
 
+
 import com.amazonaws.services.s3.AmazonS3;
 import com.amazonaws.services.s3.model.*;
 import com.amazonaws.util.IOUtils;
+import jakarta.servlet.http.HttpServletResponse;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
@@ -13,7 +15,9 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 import org.springframework.web.server.ResponseStatusException;
-
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.beans.factory.annotation.Value;
+import org.springframework.stereotype.Service;
 
 import java.io.IOException;
 import java.io.InputStream;
@@ -80,35 +84,35 @@ public class AWSService {
 
     }
 
-    public byte[] getObject(String filepath) throws IOException {
-        S3Object s3Object = amazonS3.getObject(bucket, filepath);
-        try (S3ObjectInputStream s3is = s3Object.getObjectContent()) {
-            return s3is.readAllBytes();
+    public ResponseEntity<byte[]> getObject(String storedFileName) throws IOException {
+    S3Object s3Object = amazonS3.getObject(new GetObjectRequest(bucket, storedFileName));
+    S3ObjectInputStream objectInputStream = s3Object.getObjectContent();
+    byte[] bytes = IOUtils.toByteArray(objectInputStream);
+    objectInputStream.close();
+
+    String fileName = URLEncoder.encode(storedFileName, "UTF-8").replaceAll("\\+", "%20");
+    HttpHeaders httpHeaders = new HttpHeaders();
+    httpHeaders.setContentType(MediaType.APPLICATION_OCTET_STREAM);
+    httpHeaders.setContentLength(bytes.length);
+    httpHeaders.setContentDispositionFormData("attachment", fileName);
+
+    return new ResponseEntity<>(bytes, httpHeaders, HttpStatus.OK);
+}
+
+
+    public void downloadFile(String key, HttpServletResponse response) throws IOException {
+        S3Object s3Object = amazonS3.getObject(bucket, key);
+        response.setContentType("application/octet-stream");
+        response.setHeader("Content-Disposition", "attachment; filename=\"" + key.substring(key.lastIndexOf("/") + 1) + "\"");
+
+        try (InputStream inputStream = s3Object.getObjectContent()) {
+            byte[] buffer = new byte[1024];
+            int bytesRead;
+            while ((bytesRead = inputStream.read(buffer)) != -1) {
+                response.getOutputStream().write(buffer, 0, bytesRead);
+            }
         }
     }
-
-    public S3Object downloadFile(String filePath) {
-        GetObjectRequest getObjectRequest = new GetObjectRequest(bucket, filePath);
-        return amazonS3.getObject(getObjectRequest);
-    }
-
-//public ResponseEntity<byte[]> getObject(String storedFileName) throws IOException {
-//    S3Object s3Object = amazonS3.getObject(new GetObjectRequest(bucket, storedFileName));
-//    S3ObjectInputStream objectInputStream = s3Object.getObjectContent();
-//    byte[] bytes = IOUtils.toByteArray(objectInputStream);
-//    objectInputStream.close();
-//
-//    String fileName = URLEncoder.encode(storedFileName, "UTF-8").replaceAll("\\+", "%20");
-//    HttpHeaders httpHeaders = new HttpHeaders();
-//    httpHeaders.setContentType(MediaType.APPLICATION_OCTET_STREAM);
-//    httpHeaders.setContentLength(bytes.length);
-//    httpHeaders.setContentDispositionFormData("attachment", fileName);
-//
-//    return new ResponseEntity<>(bytes, httpHeaders, HttpStatus.OK);
-//}
-
-
-
 
 
 }
